tests/outref/TGB05.ref

SELECT * FROM names n1 WHERE n1.firstName IN (SELECT n2.firstname FROM names n2 GROUP BY n2.firstname HAVING n2.firstname = MAX(n1.firstname));

[ERROR] PATH:LINENUM DATE TIME : ERR_AGGREGATE_FUNCTION_WHERE : Aggregate functions are not allowed in WHERE
Error with syntax near (line 1, column 129):

SELECT * FROM names n1 WHERE n1.firstName IN (SELECT n2.firstname FROM names n2 GROUP BY n2.firstname HAVING n2.firstname = MAX(n1.firstname));
                                                                                                                                ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT * FROM names n1 WHERE n1.firstName IN (SELECT n2.firstname FROM names n2 GROUP BY n2.firstname HAVING n2.firstname = MAX(n1.firstname));
